# solana-amm

./: .editorconfig  .gitignore  .gitlab-ci.yml  Anchor.toml  README.md  STAKING_DESIGN.md  package.json  tslint.json
docs/: CURVE_CONST_PROD.md  CURVE_STABLE.md
js/: package.json  token-farming.ts  tsconfig.json
js/cli/: main.ts  token-swap-test.ts
js/src/: index.ts  layout.ts  token-farming.ts
js/src/util/: account.ts  url.ts
program/: Cargo.toml
program/fuzz/: Cargo.toml
program/fuzz/src/: instructions.rs
program/src/: constraints.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/src/curve/: base.rs  constant_product.rs
program/src/yield_farming/: farming_state.rs  farming_ticket.rs  mod.rs  snapshots.rs
programs/amm/: CHANGELOG.md  Cargo.toml
programs/amm/benches/: base_two_exponent.rs  stable_curve_invariant.rs
programs/amm/proptest-regressions/math/: helpers.txt  stable_curve_invariant.txt
programs/amm/proptest-regressions/models/: pool.txt
programs/amm/src/: consts.rs  endpoints.rs  err.rs  lib.rs  misc.rs  models.rs  prelude.rs
programs/amm/src/endpoints/: create_discount_settings.rs  create_pool.rs  create_program_toll.rs  deposit_liquidity.rs  farming.rs  put_discount.rs  redeem_liquidity.rs  set_pool_swap_fee.rs  swap.rs
programs/amm/src/endpoints/farming/: add_harvest.rs  claim_eligible_harvest.rs  close_farmer.rs  compound_across_farms.rs  compound_same_farm.rs  create_farm.rs  create_farmer.rs  create_lp_vault.rs  dewhitelist_farm_for_compounding.rs  new_harvest_period.rs  remove_harvest.rs  set_farm_owner.rs  set_min_snapshot_window.rs  set_tokens_per_slot.rs  start_farming.rs  stop_farming.rs  take_snapshot.rs  update_eligible_harvest.rs  whitelist_farm_for_compounding.rs
programs/amm/src/math/: compute_stable_curve_invariant.rs  helpers.rs  mod.rs  sdecimal.rs  stable_curve_invariant.rs  swap_equation.rs
programs/amm/src/models/: discount.rs  farm.rs  farmer.rs  pool.rs  program_toll.rs  tests.rs
programs/amm/tests/: create_discount_settings.rs  create_pool.rs  create_program_toll.rs  deposit_liquidity.rs  put_discount.rs  redeem_liquidity.rs  set_pool_swap_fee.rs  swap.rs
programs/amm/tests/deposit_redeem/: mod.rs
programs/farming/: CHANGELOG.md  Cargo.toml
programs/farming/src/: consts.rs  endpoints.rs  err.rs  lib.rs  models.rs  prelude.rs
programs/farming/src/endpoints/: add_harvest.rs  airdrop.rs  close_farmer.rs  compound_across_farms.rs  compound_same_farm.rs  create_farm.rs  create_farmer.rs  dewhitelist_farm_for_compounding.rs  new_harvest_period.rs  remove_harvest.rs  set_farm_owner.rs  set_min_snapshot_window.rs  start_farming.rs  stop_farming.rs  update_eligible_harvest.rs  whitelist_farm_for_compounding.rs
programs/farming/src/models/: farm.rs  farmer.rs  tests.rs
tests/: amm.ts  helpers.ts  localnet-keypair.json
tests/amm/: amm.ts  index.ts  pool.ts
tests/amm/endpoints/: create-discount-settings.ts  create-pool.ts  create-program-toll.ts  deposit-liquidity.ts  put-discount.ts  redeem-liquidity.ts  set-pool-swap-fee.ts  swap.ts
tests/farming/: farm.ts  farmer.ts  helpers.ts  index.ts
tests/farming/endpoints/: add-harvest.ts  airdrop.ts  claim-eligible-harvest.ts  close-farmer.ts  compound-across-farms.ts  compound-same-farm.ts  create-farm.ts  create-farmer.ts  dewhitelist-farm-for-compounding.ts  new-harvest-period.ts  remove-harvest.ts  set-farm-owner.ts  set-min-snapshot-window.ts  start-farming.ts  stop-farming.ts  take-snapshot.ts  update-eligible-harvest.ts  whitelist-farm-for-compouding.ts
tests/src/: farm.ts  farmer.ts  helpers.ts  index.ts
tests/src/endpoints/: add-harvest.ts  claim-eligible-harvest.ts  close-farmer.ts  compound-across-farms.ts  compound-same-farm.ts  create-farm.ts  create-farmer.ts  dewhitelist-farm-for-compounding.ts  new-harvest-period.ts  remove-harvest.ts  set-farm-owner.ts  start-farming.ts  (+6 more)
