[package]
name = "amm"
version = "0.3.2"
description = "Deposit liquidity to earn fees and swap between mints"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
dev = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
decimal = { git = "https://github.com/aldrin-exchange/solana-decimal", tag = "0.1.1" }

[dev-dependencies]
solana-sdk = "1.9.18"
serial_test = "0.6"
pretty_assertions = "1.2"
anchortest = { git = "https://github.com/aldrin-exchange/solana-anchortest", tag = "0.2.3" }
