[package]
name = "farming"
version = "2.1.0"
description = "Stake tokens and collect harvest"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farming"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
decimal = { git = "ssh://git@gitlab.com/crypto_project/defi/decimal.git", tag = "0.1.0" }

[dev-dependencies]
solana-sdk = "1.9.18"
serial_test = "0.6"
