[package]
name = "farming"
version = "3.0.0"
description = "Stake tokens and collect harvest"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farming"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
dev = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
decimal = { git = "https://github.com/aldrin-exchange/solana-decimal", tag = "0.5.0" }

[dev-dependencies]
solana-sdk = "1.10.29"
serial_test = "0.6"
